--- a/src/components/pages/Visit/Visit.module.css
+++ b/src/components/pages/Visit/Visit.module.css
@@ -171,10 +171,26 @@
 
 .bottomWrapper {
   width: 100%;
-  background-image: url('./img/danInFront.jpg');
+  /* background-image: url('./img/danInFront.jpg'); */
+  /* background-size: cover; */
+  /* background-position: center center; */
+  /* background-attachment: fixed; */
+}
+
+.bottomWrapper:before {
+  content: '';
+  display: block;
+  position: fixed;
+  left: 0;
+  top: 0;
+  width: 100%;
+  height: 100%;
+  z-index: -10;
+  background: url('./img/danInFront.jpg') no-repeat center center;
+  -webkit-background-size: cover;
+  -moz-background-size: cover;
+  -o-background-size: cover;
   background-size: cover;
-  background-position: center center;
-  background-attachment: fixed;
 }
 
 .spacer {
